# trellis

./: .coveragerc  .gitignore  CHANGELOG.md  COMMERCIAL.md  CONTRIBUTING.md  FILESPEC.md  INSTALLATION.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  conftest.py
examples/: README.md  (+3 more)
kernel/: Cargo.toml  README.md
kernel/examples/: scan_tablet_filespec.rs
kernel/src/: abstract_model.rs  artifact_validation.rs  audit_normalization.rs  bridge_verifier_bindings.rs  burst_history.rs  cache_key.rs  check_ledger.rs  disk_cache.rs  engine.rs  filespec.rs  filespec_split.rs  legacy_import.rs  lib.rs  model.rs  paper_fingerprints.rs  paper_targets.rs  progress_history.rs  request_contracts.rs  review_normalization.rs  runtime.rs  runtime_cli_observations.rs  tablet_root.rs  tablet_support.rs  verification_normalization.rs  worker_normalization.rs
kernel/tests/: boundary_cut_symmetric_regression.rs  canonical_def_inlining_sanity.rs  cli_wrapper.rs  cone_clean_closure.rs  contract_baseline.rs  halt_marker_ack.rs  local_closure_disk_durability.rs  local_closure_smoke.rs  runtime_cli.rs  runtime_cli_snapshots.rs  serde_roundtrip.rs  shallow_coarse_cross_check.rs  substantiveness_advance_phase_gate.rs  substantiveness_normalizer.rs  substantiveness_proof_formalization_helper.rs  substantiveness_validator.rs  tla_replay.rs  tla_replay_regen.rs
kernel/tests/common/: mod.rs
kernel/tests/contract_baseline/build_malformed_response/: audit.json  review.json  stuck_math_audit.json  worker.json
kernel/tests/fixtures/: tla_replay.json  tla_replay_closure.json
(+448 files in other folders)
