[package]
name = "trellis-kernel"
version = "0.1.0"
edition = "2021"
license = "PolyForm-Noncommercial-1.0.0"

[lib]
name = "trellis_kernel"
path = "src/lib.rs"

[[bin]]
name = "trellis_kernel_cli"
path = "src/bin/cli.rs"

[[bin]]
name = "trellis_runtime_cli"
path = "src/bin/runtime_cli.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
libc = "0.2"
enum_dispatch = "0.3"

[dev-dependencies]
insta = { version = "1", features = ["filters", "json", "redactions"] }
proptest = "1"
tempfile = "3"
